[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["SmileSky <mzdk100@foxmail.com>"]
repository = "https://github.com/mzdk100/compo-window"

[workspace.dependencies]
compo = "0.1.2"
compo-platform-loop = "0.1.3"
encoding_rs = "0.8.35"
jni = "0.21.1"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"
tracing = "0.1.41"
tracing-logcat = "0.1.0"
tracing-subscriber = "0.3.20"
windows = "0.62.2"

[workspace]
default-members = ["examples/desktop"]
members = ["examples/android", "examples/desktop"]
resolver = "3"

[package]
name = "compo-window"
version.workspace = true
edition.workspace = true
description = "Cross-platform window component for the Compo declarative and reactive component framework"
license = "Apache-2.0"
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/compo-window"
readme = "README.md"
keywords = ["gui", "window", "cross-platform", "reactive", "component"]
categories = ["gui", "api-bindings", "os"]
exclude = [
    "examples/",
    ".github/",
]

[dependencies]
compo.workspace = true
compo-platform-loop = {workspace = true,features = ["application"]}
tracing = {workspace = true,features = ["std"]}

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features=["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"]

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { workspace = true, features = ["exception"] }
objc2-foundation.workspace = true
objc2-ui-kit.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true, features = ["exception"] }
objc2-foundation.workspace = true
objc2-app-kit.workspace = true

[build-dependencies]
encoding_rs.workspace = true