[package]
name = "cw-ios"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]

[target.'cfg(target_os = "ios")'.dependencies]
yl-app.path = "../../crates/app"
objc2-foundation.workspace = true
tracing = {workspace = true, features = ["std"]}
tracing-subscriber.workspace = true
tracing-oslog.workspace = true
